--- a/dance/public/index.html
+++ b/dance/public/index.html
@@ -8,17 +8,19 @@
 
 <body>
     <div id="header">
-    <h1>House Dance Training Method</h1>
+    <h1>House<br>Dance<br>Training<br>Method</h1>
     </div><!-- #header -->
     
     <div id="main">
     <div class="section">
     <h2>インストラクター : TooRu（木下　徹）</h2>
-    <img src="file:///Users/yazid/development/kino/dance/img/tooru.png"/>
-    <h3>クラス内容</h3>
-    <p>ハウスミュージックをベースとし、（アイソレーション〜リズムトレーニング〜フットワーク〜ハウスダンス〜ストレッチ）といった流れで行われるダンストレーニングメソッド。<br>入門者・上級者と内容を区分けするのではなく、一貫して毎週繰り返し行われるメニューの中で、全員の方へダンス本来の楽しさを感じてもらい、ハウスダンスの基本から応用までしっかり指導していきます。またアスリートの方達へ向けた新しいトレーニング方法として捉える事も出来ると思います。続けていく中で誰もがしっかり上達していける内容となっております。</P>
+    <img src="file:///Users/yazid/development/kino/dance/img/tooru.png"/><br>
 
-    <h3>対象者</h3>
+    <h2>クラス内容</h2>
+    <p>ハウスミュージックをベースとし、（アイソレーション〜リズムトレーニング〜フットワーク〜ハウスダンス〜ストレッチ）といった流れで行われるダンストレーニングメソッド。<br>
+    入門者・上級者と内容を区分けするのではなく、一貫して毎週繰り返し行われるメニューの中で、全員の方へダンス本来の楽しさを感じてもらい、ハウスダンスの基本から応用までしっかり指導していきます。またアスリートの方達へ向けた新しいトレーニング方法として捉える事も出来ると思います。続けていく中で誰もがしっかり上達していける内容となっております。</P>
+
+    <h2>対象者</h2>
     <ol>
         <li>ダンス及びハウスダンスに興味がある方</li>
         <li>リズム感を身につけたい方</li>
@@ -27,6 +29,26 @@
         <li>ダイエット目的の方</li>
     </ol>
     <p>目的は人それぞれ、誰でもレッスンを受けることが可能なクラスです</p>
+
+    <h2>対象年齢</h2>
+    <p>小学生〜大人までの男女</p>
+
+    <h2>Time</h2>
+    <p>20:30 〜 22:00 / 90min
+
+    <h2>ハウスミュージックとは</h2>
+    <p>1977年にアメリカのシカゴで誕生した音楽ｼﾞｬﾝﾙの一つ。<br>
+    この世の中のありとあらゆるｼﾞｬﾝﾙ・音源の融合対である。<br>
+    「4つ打ち」と称される四分音符で1小節に4つのバスドラム音が鳴る楽曲構成が基本のリズム体。<br>
+    BPM（beats per minute）120前後のテンポ。<br></p>
+
+    <h2>ハウスダンスとは</h2>
+    <p>1980年代よりアメリカのニューヨークにて育まれる。ストリートダンスのニュースクールに分類される。<br>
+    流れるような素早い足裁きとグルーヴ（体で表現する音に対してのノリ）が特徴。<br></p>
+
+    <h2>ハウスダンストレーニングメソッドにおける効果～考え方</h2>
+    <p>ヒップホップと比べ曲のテンポも速く、有酸素運動としての効果も非常に高く、ダンスは音楽に合わせて身体を動かす為、楽しみながら行えます。
+リズム感・バランス感覚・ボディーコントロール・体力・瞬発力・敏捷性・柔軟性・創造性等、様々な効果が期待出来るほか、近代のアスリート全般のトレーニングでは補えない要素も中にはたくさん含まれていると言われています。レッスンを続けていく中で振り付けではなく音楽に合わせて自分なりの踊りが出来るようになってくると創造性（自分のイメージ→具現化）が養われてきている証拠です。海外のプロスポーツ選手の中には、小さい頃からダンスに触れて育った人も多く、ひとつ例を挙げればよくサッカーの得点シーンにおいてゴールパフォーマンスで踊っている姿等が想像出来るかと思います。日頃からダンスに触れている選手に共通して言える事は、身体の使い方が非常に上手く、独特なリズム感を兼ね備えています。また他の選手と比べてみても創造性に溢れたプレーや違いを生み出せる選手だったりします。まずこうした選手に通じて言えることは何事においても楽しむ事の術を知っているのです。ダンスは楽しむ事が大前提です、スポーツにも同じことが言えます。しかしその純粋に楽しむということ自体が、実は掴みにくかったりもするのです。レクチャーの中ではまず楽しむ事、楽しさを伝えることに重点をおいています。楽しみ方がわかってくると自主性も生まれ、自然と上達していくものです。ダンスを通じて得たものが各自の本来の目的において様々なプラス効果を生み出してくれます。</p>
     </div>
     </div>
     
