--- a/dance/public/index.html
+++ b/dance/public/index.html
@@ -9,12 +9,13 @@
 <body>
     <div id="header">
     <h1>House<br>Dance<br>Training<br>Method</h1>
+
+    <img src="file:///Users/yazid/development/kino/dance/img/tooru.png"/>
     </div><!-- #header -->
-    
+    　
     <div id="main">
     <div class="section">
-    <h2>インストラクター : TooRu（木下　徹）</h2>
-    <img src="file:///Users/yazid/development/kino/dance/img/tooru.png"/><br>
+    <h2>インストラクター : TooRu（木下 徹）</h2>
 
     <h2>クラス内容</h2>
     <p>ハウスミュージックをベースとし、（アイソレーション〜リズムトレーニング〜フットワーク〜ハウスダンス〜ストレッチ）といった流れで行われるダンストレーニングメソッド。<br>
